# pedalog-tool

./: .gitignore  CMakeLists.txt  INSTALL  Makefile  README
_CPack_Packages/Linux/DEB/: pedalog-tool-0.1.0-Linux.deb
_CPack_Packages/Linux/DEB/pedalog-tool-0.1.0-Linux/: control  md5sums
debian/: changelog  control  copyright
src/: pedalog-tool.c
